--- a/01-intro2Genomics.Rmd
+++ b/01-intro2Genomics.Rmd
@@ -621,7 +621,7 @@ enough to not to bind sequences from other genes. This technology is now being
 replaced with sequencing technology, where you directly sequence your genetic
 material. If you have the sequence of your fragments, you can align them back
 to genome, see where they are coming from and count them. This is a better 
-technology where the quantification is based on the real identiy of fragments 
+technology where the quantification is based on the real identity of fragments 
 rather than based on hybridization to designed probes.
 
 In summary HT techniques have the following steps, and this also summarized in
